<h3>February 08, 2017</h3>
<b><u>ADMIN</u></b>
 - If you are admin, you can now add <a href="/admin/accesslist" target="_blank">Access Lists</a> to (temporarily) share your map to others, even outside your access-control-group.

<b><u>MAP</u></b>
 - Added an icon on a system that has a notification.
 - Fixed the bug that sometimes frigate wormhole could not be unchecked.

<b><u>CREST</u></b>
 - Location tracking has now been running for some time, it had some problems at first but I managed to tweak and fix the tracker and it should now be running smoothly!
	- There was a weekend where VIPPY became really laggy and unresponsive. This was because of the CREST location tracking.
	- Sometimes fleet tracking and location tracking would have different datasets (because of cache timers).
	  This would result in your characters bouncing back and forth systems (more jump log entries then what was actually jumped anyone?)
  Ofcourse, I will continue to monitor how it is running and make adjustments when needed.
  Help pages will be updated as soon as everything has been running well for atleast a few weeks.



<h3>January 23, 2017</h3>
<b><u>ADMIN</u></b>
 - Fixed a bug in setting map permissions. Removing a corporation from a map did not save.

<b><u>CREST</u></b>
 - <strong>Now introducing individual location tracking through CREST!</strong>
 	CCP have increased the rate limits for CREST. This means it is now viable for VIPPY to start fetching locations of characters, no need to rely on fleet information anymore.
 	If all goes well, you should see an improvement to VIPPY's ability to track your characters. The refresh rate has gone from 30 seconds to 10 seconds.
 		- Ofcourse, VIPPY can only track characters for which you have an <a href="/profile/characters" target="_blank">active CREST token</a>.
 		- Fleet tracking will still be possible for characters that do not have an active CREST token.
 		- Fleet tracking is, for now, still needed to get shiptypes.