@@ -6,8 +6,7 @@ class Maintenance
     function doDefault($arguments=[])
     {
         \AppRoot::doCliOutput("do maintenance");
-        foreach (\Modules::getModuleObjects() as $module)
-        {
+        foreach (\Modules::getModuleObjects() as $module) {
             if (method_exists($module, "doMaintenance"))
                 $module->doMaintenance();
         }
