@@ -1,3 +1,9 @@
+<b><u>VIPPY</u></b>
+ - Sometimes, if you've manually set your main character Vippy would reset it every once in a while for no apparent reason. This has been fixed.
+ 
+
+
+
 <h3>February 08, 2017</h3>
 <b><u>ADMIN</u></b>
  - If you are admin, you can now add <a href="/admin/accesslist" target="_blank">Access Lists</a> to (temporarily) share your map to others, even outside your access-control-group.
